tests/baselines/reference/logicalNotExpression1.errors.txt
tests/cases/compiler/logicalNotExpression1.ts(1,2): error TS2304: Cannot find name 'foo'.


==== tests/cases/compiler/logicalNotExpression1.ts (1 errors) ====
    !foo;
     ~~~
!!! error TS2304: Cannot find name 'foo'.